--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <b>Category:</b>
-  <%= @product.category.name %>
+  <%= @product.category.try(:name) %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
